--- a/css/media_style.css
+++ b/css/media_style.css
@@ -7,14 +7,14 @@
 
 @media screen and (max-width: 1174px)
 {
-	#content ,
-	#about ,
-	.map ,
-	#social ,
-	footer
+	/*#content ,*/
+	/*#about ,*/
+	/*.map ,*/
+	/*#social ,*/
+	/*footer
 	{
 		display: none;
-	}
+	}*/
 
 
 
@@ -28,7 +28,7 @@
 
 
 
-
+/*-------------------header--------------------*/
 
 
 
@@ -67,6 +67,11 @@
 
 @media screen and (max-width: 820px)
 {
+	header
+	{
+		background-position: right bottom;
+	}
+
 	header h1 
 	{
 	    font-size: 38px;
@@ -113,5 +118,356 @@
 	{
 		margin-left: 10px;
 		margin-right: 10px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------#content----------------------*/
+
+@media screen and (max-width: 1174px)
+{
+	.products
+	{
+		width: 769px;
+		margin-left:auto;
+		margin-right: auto;
+	}
+
+
+		/*add line*/
+
+
+	.name_block:after {
+	    content: '';
+	    position: absolute;
+	    width: 635px;
+	    height: 3px;
+	    background-color: #ccc;
+	    right: 32px;
+	    top: 7px;
+	}
+
+
+
+
+
+	.name_block_second:after 
+	{
+	    content: '';
+	    position: absolute;
+	    width: 599px;
+	    height: 3px;
+	    background-color: #ccc;
+	    right: 133px;
+	    top: 9px;
+	}
+}
+
+@media screen and (max-width: 800px)
+{
+	#bnt_check_all
+	{
+		display: block;
+		margin: 0 auto;
+		margin-top: 30px;
+		float: none;
+	}
+
+	.menu_selection .mr_l_34
+	{
+		margin: 0 auto;
+		text-align: center;
+	}
+
+	.menu_selection{padding-top: 100px}
+
+	.menu_selection label:nth-child(3)
+	{
+		margin-right: 0;
+	}
+
+	.def_product
+	{
+		margin: 0;
+	}
+
+	.def_product:first-child {
+    margin-left: 0;
+	}
+
+	.products
+	{
+		width: 638px;
+		margin-left:auto;
+		margin-right: auto;
+	}
+
+.name_block:after {
+    content: '';
+    position: absolute;
+    width: 569px;
+    height: 3px;
+    background-color: #ccc;
+    right: 4px;
+    top: 7px;
+}
+
+.name_block_second:after {
+    content: '';
+    position: absolute;
+    width: 564px;
+    height: 3px;
+    background-color: #ccc;
+    right: 98px;
+    top: 9px;
+}
+
+
+.name_block, .name_block_second{margin-left: 0;}
+
+.name_block_second{margin-right: 0;}
+
+
+}
+
+
+@media screen and (max-width: 638px)
+{
+	.products 
+	{
+	    width: 320px;
+	    margin-left: auto;
+	    margin-right: auto;
+	}
+
+
+.name_block:after {
+    content: '';
+    position: absolute;
+    width: 254px;
+    height: 3px;
+    background-color: #ccc;
+    right: 8px;
+    top: 7px;
+}
+
+.name_block_second:after {
+    content: '';
+    position: absolute;
+    width: 229px;
+    height: 3px;
+    background-color: #ccc;
+    right: 88px;
+    top: 7px;
+}
+
+.list_go {
+    padding: 0;
+    margin: 0;
+    width: 320px;
+    position: relative;
+    left: 0;
+    transition: all 1s;
+}
+
+
+.choice_products ,
+.choice_products_second{display: none;}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------#about----------------------*/
+
+@media screen and (max-width: 800px)
+{
+	#about fieldset {
+	    width: 100%;
+	    border: 2px solid #918363;
+	    width: 92%;
+	    display: inline-block;
+	    margin: 71px 0;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------form_w_map----------------------*/
+@media screen and (max-width: 1174px)
+{
+	.form_w_map textarea
+	{
+		margin-top: 0;
+	}
+
+	.form_w_map input[type = "text"] ,
+	.form_w_map input[type = "email"]
+	{
+		margin-bottom: 27px;
+	}
+
+	.form_w_map input[type = "text"], .form_w_map input[type = "email"], .form_w_map textarea
+	{
+		float: none;
+		width: 90%;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.form_w_map
+	{
+		width: 100%;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------form_w_map----------------------*/
+
+
+@media screen and (max-width: 1174px)
+{
+	#social
+	{
+		text-align: center;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*---------------------footer------------------------*/
+
+@media screen and (max-width: 1174px)
+{
+	footer .container .left
+	{
+		margin-left: 17px;
+	}
+
+	footer .container .right
+	{
+		margin-right: 17px;
+	}
+
+
+	footer .container .left p
+	{
+		margin:  0 auto
+	}
+}
+
+
+@media screen and (max-width: 700px)
+{
+	footer .container .left ,
+	footer .container .right
+	{
+		float: none;
+		text-align: center;
+	}
+
+	.menu_footer li.left
+	{
+		float: left;
+	}
+
+	.Design
+	{
+		text-align: center;
+	}
+
+	.menu_footer
+	{
+		display: none;
+	}
+
+
+	footer .container .left
+	{
+		margin-left: 0;
+	}
+
+	footer .container .right
+	{
+		margin-right: 0;
 	}
 }
