--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,14 @@ header p
 	margin-right: 32px;
 }
 /*products block*/
+
+.trans
+{
+	width: 250px;
+	height: 250px;
+}
+
+
 .products
 {
 	position: relative;
@@ -746,4 +754,79 @@ footer p
 	padding-top: 35px;
 	font-size: 20px;
 	font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*window form*/
+
+.window-form
+{
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	background-color: rgba(0,0,0,.3);
+	display: none;
+}
+
+
+.form_buy
+{
+	width: 539px;
+	background-color: #fafafa;
+	margin:0  auto;
+	border-radius: 6px;
+
+	overflow:hidden;
+
+	margin-top: 10%;
+
+	padding-bottom: 20px;
+}
+
+.form_buy p
+{
+	background-color: #03a9f4;
+	text-align: center;
+	font-size: 24px;
+	padding:18px 0;
+	color: #fff;
+}
+
+
+.form_buy input
+{
+	width: 500px;
+	height: 45px;
+	border: 2px solid #e0e0e0;
+	margin: 0 auto;
+	display: block;
+	margin-top:20px;
+	border-radius: 5px;
+	font-size: 18px;
+	padding-left: 5px;
+}
+
+.form_buy .f-r-button
+{
+	color: white;
+	font-size: 18px;
+	background-color: #f44336;
+	border: none;
+	padding-left: 0px;
+	width: 305px;
 }
