--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@
 	font-family: 'Quicksand Bold', arial;
 }
 
+html
+{
+	height: 100%;
+}
+
 .container
 {
 	max-width: 1152px;
@@ -537,6 +542,35 @@ header p
 	display: none;
 }
 
+.about_product_list_non_par {
+    /*width: 196px;*/
+    font-size: 14px;
+}
+
+.trans_mini_block
+{
+	position: relative;
+	width: 60px;
+	height: 48px;
+	display: inline-block;
+}
+
+.trans_mini
+{
+	width: 60px;
+	position: relative;
+}
+
+.trans_mini:hover
+{
+	position: absolute;
+	top:0;
+	left:0;
+	width: 140px;
+	z-index: 999;
+}
+
+
 .about_product_list
 {
 	display: block;
@@ -779,9 +813,11 @@ footer p
 	height: 100%;
 	left: 0;
 	top: 0;
-	background-color: rgba(0,0,0,.3);
+	background-color: rgba(0,0,0,.6);
 	display: none;
 }
+
+
 
 
 .form_buy
@@ -790,12 +826,16 @@ footer p
 	background-color: #fafafa;
 	margin:0  auto;
 	border-radius: 6px;
-
 	overflow:hidden;
-
 	margin-top: 10%;
-
 	padding-bottom: 20px;
+	position: relative;
+}
+
+.form_buy_cross {
+    position: absolute;
+    top: 17px;
+    right: 15px;
 }
 
 .form_buy p
@@ -829,4 +869,17 @@ footer p
 	border: none;
 	padding-left: 0px;
 	width: 305px;
+}
+
+.form_buy_in
+{
+	display: none;
+}
+
+.form_buy_pr .product_for_basket {
+    width: 95%;
+    height: 60px;
+    margin: 2px 3px;
+    position: relative;
+    color: #535253;
 }
